--- a/styles/globals.css
+++ b/styles/globals.css
@@ -130,7 +130,7 @@
 }
 
 .prompt_layout {
-  @apply space-y-6 py-8 sm:columns-2 sm:gap-6 xl:columns-3;
+  @apply grid grid-cols-1 gap-y-6 lg:grid-cols-2 xl:grid-cols-3 sm:gap-x-8 gap-x-10;
 }
 
 /* Feed Component */
@@ -162,7 +162,7 @@
 
 /* PromptCard Component */
 .prompt_card {
-  @apply text-left flex-1 break-inside-avoid rounded-lg border border-gray-300 bg-white/20 bg-clip-padding p-6 pb-4 backdrop-blur-lg backdrop-filter md:w-[360px] w-full h-fit;
+  @apply text-left flex-1 break-inside-avoid rounded-lg border border-gray-300 bg-white/20 bg-clip-padding p-6 pb-4 backdrop-blur-lg backdrop-filter lg:w-[360px] w-full h-full;
 }
 
 .flex-center {
