Re-theming the home and sign-in page + handling the sign-out with passage auth

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,15 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Barlow:wght@100;200;300;400;500;600;700;800;900&display=swap"); */
+/* @import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@100;200;300;400;500;600;700;800&display=swap"); */
+
+@font-face {
+  font-family: "Mona Sans";
+  src: url("/assets/fonts/MonaSans/Mona-Sans.woff2")
+      format("woff2 supports variations"),
+    url("/assets/fonts/MonaSans/Mona-Sans.woff2") format("woff2-variations");
+  font-weight: 200 900;
+  font-stretch: 75% 125%;
+}
 
 @tailwind base;
 @tailwind components;
@@ -16,9 +27,10 @@
   justify-content: center;
   padding: 120px 24px 160px 24px;
   pointer-events: none;
+  @apply bg-github-canvas-dark;
 }
 
-.main:before {
+/* .main:before {
   background: radial-gradient(circle, rgba(2, 0, 36, 0) 0, #fafafa 100%);
   position: absolute;
   content: "";
@@ -26,7 +38,7 @@
   width: 100%;
   height: 100%;
   top: 0;
-}
+} */
 
 .main:after {
   content: "";
@@ -36,11 +48,10 @@
   width: 100%;
   height: 100%;
   top: 0;
-  opacity: 0.4;
-  filter: invert(1);
+  opacity: 0.15;
 }
 
-.gradient {
+/* .gradient {
   height: fit-content;
   z-index: 3;
   width: 100%;
@@ -63,7 +74,7 @@
   filter: blur(100px) saturate(150%);
   top: 80px;
   opacity: 0.15;
-}
+} */
 
 @media screen and (max-width: 640px) {
   .main {
@@ -78,19 +89,19 @@
 }
 
 .black_btn {
-  @apply rounded-full border border-black bg-black py-1.5 px-5 text-white transition-all hover:bg-white hover:text-black text-center text-sm font-inter flex items-center justify-center;
+  @apply rounded-full border border-black bg-black py-1.5 px-5 text-white transition-all hover:bg-white hover:text-black text-center text-sm font-monaSans flex items-center justify-center;
 }
 
 .purple_gradient_btn {
-  @apply rounded-full bg-purple_gradient  py-1.5 px-5 text-white text-center text-sm font-inter flex items-center justify-center;
+  @apply rounded-full bg-purple_gradient  py-1.5 px-5 text-white text-center text-sm font-monaSans flex items-center justify-center;
 }
 
 .outline_btn {
-  @apply rounded-full border border-black bg-transparent py-1.5 px-5 text-black transition-all hover:bg-black hover:text-white text-center text-sm font-inter flex items-center justify-center;
+  @apply rounded-full border border-white bg-transparent py-1.5 px-5 text-white transition-all hover:border-gray-300 hover:text-gray-300 text-center text-sm font-monaSans flex items-center justify-center;
 }
 
 .head_text {
-  @apply text-5xl font-extrabold leading-[1.15] text-black sm:text-6xl;
+  @apply text-5xl font-barlow font-extrabold leading-[1.15] text-white sm:text-6xl;
 }
 
 .orange_gradient {
@@ -109,20 +120,28 @@
   @apply bg-gradient-to-r from-purple-600 to-fuchsia-500 bg-clip-text text-transparent;
 }
 
+.github-purple-gradient {
+  @apply bg-gradient-to-r from-purple-600 to-fuchsia-500 bg-clip-text text-transparent;
+}
+
 .bg-purple_gradient {
   @apply bg-gradient-to-r from-purple-600 to-fuchsia-500;
 }
 
 .desc {
-  @apply mt-5 text-lg text-gray-600 sm:text-xl max-w-2xl;
+  @apply mt-5 text-lg text-white sm:text-xl max-w-2xl;
 }
 
 .search_input {
-  @apply block w-full rounded-md border border-gray-200 bg-white py-2.5 font-satoshi pl-5 pr-12 text-sm shadow-lg font-medium focus:border-black focus:outline-none focus:ring-0;
+  @apply block w-full rounded-md border border-gray-200 bg-white py-2.5 font-monaSans pl-5 pr-12 text-sm shadow-lg font-medium focus:border-black focus:outline-none focus:ring-0;
+}
+
+.search_input_dark {
+  @apply block w-full text-white rounded-md border border-github-light bg-github-canvas-subtle py-2.5 font-monaSans pl-5 pr-12 text-sm shadow-lg font-medium transition-all duration-300 focus:border-white outline-none focus:ring-0;
 }
 
 .copy_btn {
-  @apply w-7 h-7 rounded-full bg-white/10 shadow-[inset_10px_-50px_94px_0_rgb(199,199,199,0.2)] backdrop-blur flex justify-center items-center cursor-pointer;
+  @apply w-7 h-7 rounded-full bg-github-light backdrop-blur flex justify-center items-center cursor-pointer;
 }
 
 .glassmorphism {
@@ -149,7 +168,7 @@
 
 /* Nav Component */
 .logo_text {
-  @apply max-sm:hidden font-satoshi font-semibold text-lg text-black tracking-wide;
+  @apply max-sm:hidden font-monaSans font-semibold text-lg text-white tracking-wide;
 }
 
 .dropdown {
@@ -157,12 +176,12 @@
 }
 
 .dropdown_link {
-  @apply text-sm font-inter text-gray-700 hover:text-gray-500 font-medium;
+  @apply text-sm font-monaSans text-gray-700 hover:text-gray-500 font-medium;
 }
 
 /* PromptCard Component */
 .prompt_card {
-  @apply text-left flex-1 break-inside-avoid rounded-lg border border-gray-300 bg-white/20 bg-clip-padding p-6 pb-4 backdrop-blur-lg backdrop-filter lg:w-[360px] w-full h-full;
+  @apply text-left flex-1 break-inside-avoid rounded-lg border border-github-light bg-github-canvas-subtle bg-clip-padding p-6 pb-4 backdrop-blur-lg backdrop-filter lg:w-[360px] w-full h-full;
 }
 
 .flex-center {
@@ -179,4 +198,27 @@
 
 .flex-between {
   @apply flex justify-between items-center;
+}
+
+/* Passage Auth */
+passage-auth {
+  --passage-header-font-family: "Mona Sans", sans-serif;
+  --passage-body-font-family: "Mona Sans", sans-serif;
+  --passage-body-text-color: #fff;
+
+  --passage-header-text-color: #fff;
+
+  --passage-button-font-size: 0.875rem;
+  --passage-button-font-weight: 400;
+  --passage-button-width: 50%;
+  --passage-control-border-color: #30363d;
+  --passage-button-border-radius: 9999px;
+  --passage-primary-color: #d946ef;
+  --passage-onprimary-color: #fff;
+
+  --passage-container-background-color: #000;
+}
+
+.authContainer {
+  @apply text-left break-inside-avoid rounded-lg border border-github-light bg-github-canvas-subtle bg-clip-padding p-6 pb-4 backdrop-blur-lg backdrop-filter lg:w-[360px] w-full;
 }
